# Deconvolving_Kernel_Regression

./: LICENSE  README.md  pyproject.toml
scripts/: compare_running_time_fft_explicit_formula.py  plot_comparison_square_vs_rectangular_support.py  plot_consistency_for_1d_function.py  plot_consistency_for_1d_function_not_smooth.py  plot_deconvolving_kernel_for_different_variances.py  start_experiment.sh
src/deconvolving_kernel/: __init__.py  first_code.py  first_debug.py  fourier_transformation_kernels.py  kernels.py  plot_kernels.py
